<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_back_icon">go back</string>
    <string name="come_back_chip_text">обратно</string>
    <string name="date_picker_chip_text">8 дек, вс</string>
    <string name="how_many_chip_text">1, эконом</string>
    <string name="filters_chip_text">фильтры</string>
    <string name="direct_flights_title_text">Прямые релйсы</string>
    <string name="show_all_text_button">Показать все</string>
    <string name="show_all_tickets_button">Посмотреть все билеты</string>
    <string name="price_subscribe">Подписка на цену</string>
    <string name="airline_logo">airline_logo</string>
    <string name="company_text_stub">Уральские авиалинии</string>
    <string name="time_range_text_stub">07:00 09:10 10:00 11:00 12:00 13:00 12:00</string>
    <string name="price_text_stub">2 390 ₽</string>
    <string name="notification_icon_text">notification icon</string>
</resources>