<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search_bar"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            app:cardBackgroundColor="@color/grey_4"
            app:cardCornerRadius="@dimen/space_medium"
            app:cardElevation="@dimen/space_medium"
            app:cardMaxElevation="@dimen/space_large"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/go_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/go_back_icon"
                    android:padding="@dimen/space_small"
                    android:src="@drawable/arrow_back_24px"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textFrom"
                    style="?attr/textInputOutlinedDenseStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconCheckable="false"
                    app:endIconDrawable="@drawable/swap_vert_24px"
                    app:endIconMode="custom"
                    app:endIconTint="@color/grey_7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/materialDivider"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeholderText="@string/text_from_placeholder_stub"
                    app:placeholderTextAppearance="@style/TextAppearance.ButtonText1"
                    app:placeholderTextColor="@color/grey_6">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="textCapSentences|textPhonetic|textFilter"
                        android:maxLines="1"
                        android:text="@string/text_from_stub"
                        android:textAppearance="@style/TextAppearance.ButtonText1"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textTo"
                    style="?attr/textInputOutlinedDenseStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hapticFeedbackEnabled="true"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:endIconDrawable="@drawable/close_24px"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/grey_7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/go_back"
                    app:layout_constraintTop_toBottomOf="@+id/materialDivider"
                    app:placeholderText="@string/text_to_stub"
                    app:placeholderTextAppearance="@style/TextAppearance.ButtonText1"
                    app:placeholderTextColor="@color/grey_6">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences|textPhonetic"
                        android:maxLines="1"
                        android:textAppearance="@style/TextAppearance.ButtonText1"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/materialDivider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/space_medium"
                    app:dividerColor="@color/grey_6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/go_back"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <Space
            android:id="@+id/search_bar_spacer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_medium"
            app:layout_constraintTop_toBottomOf="@+id/search_bar" />

        <HorizontalScrollView
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_bar_spacer">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/space_medium"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/come_back"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/come_back_chip_text"
                    android:textAppearance="@style/TextAppearance.Title3Italic"
                    app:chipIcon="@drawable/add_24px"
                    app:ensureMinTouchTargetSize="true"
                    app:rippleColor="@color/grey_5" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/date_picker"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_picker_chip_text"
                    android:textAppearance="@style/TextAppearance.Title3Italic"
                    app:ensureMinTouchTargetSize="true"
                    app:rippleColor="@color/grey_5" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/how_many"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_many_chip_text"
                    android:textAppearance="@style/TextAppearance.Title3Italic"
                    app:chipIcon="@drawable/person_24px"
                    app:ensureMinTouchTargetSize="true"
                    app:rippleColor="@color/grey_5" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filters"
                    style="@style/Widget.App.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_chip_text"
                    android:textAppearance="@style/TextAppearance.Title3Italic"
                    app:chipIcon="@drawable/tune_24px"
                    app:ensureMinTouchTargetSize="true"
                    app:rippleColor="@color/grey_5" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <Space
            android:id="@+id/chip_group_spacer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_medium"
            app:layout_constraintTop_toBottomOf="@+id/chip_group" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/recycler_container"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/grey_1"
            app:cardCornerRadius="@dimen/space_medium"
            app:cardElevation="@dimen/space_medium"
            app:cardMaxElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_spacer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_medium"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direct_flights_title_text"
                    android:textAppearance="@style/TextAppearance.Title2"
                    android:textColor="@color/white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/direct_flights_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_medium"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_offer_ticket" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_all"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_all_text_button"
                    android:textAppearance="@style/TextAppearance.ButtonText1" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:id="@+id/recycler_spacer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_medium"
            app:layout_constraintTop_toBottomOf="@+id/recycler_container" />

        <Button
            android:id="@+id/show_all_tickets"
            style="@style/Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/space_small"
            android:text="@string/show_all_tickets_button"
            android:textAppearance="@style/TextAppearance.ButtonText1"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/recycler_spacer" />

        <Space
            android:id="@+id/show_all_spacer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_medium"
            app:layout_constraintTop_toBottomOf="@+id/show_all_tickets" />

        <com.google.android.material.card.MaterialCardView
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/grey_1"
            app:cardCornerRadius="@dimen/space_small"
            app:cardElevation="@dimen/space_small"
            app:cardMaxElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/show_all_spacer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/space_small"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/notification_icon_text"
                    android:src="@drawable/notifications_24px"
                    app:tint="@color/blue" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/space_small"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/price_subscribe"
                    android:textAppearance="@style/TextAppearance.Text1"
                    android:textColor="@color/white" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:thumbTint="@color/white" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>